src/components/DataTable/cells/TableCell.scss
@use '../../../utils/index.scss';

.moonstone-tableCell {
    gap: var(--spacing-nano);
    min-width: 0;
    padding-right: var(--spacing-medium);
    padding-left: var(--spacing-medium);
}

.moonstone-tableCell.moonstone-tableCell_truncate {
    display: block;
}

// Scroll: truncate by default, horizontal scroll on hover.
.moonstone-tableCell_scroll {
    display: block;
    padding-bottom: var(--spacing-nano);

    white-space: nowrap;
    overflow: hidden;

    text-overflow: ellipsis;

    &:hover {
        padding-bottom: var(--spacing-nano);

        text-overflow: clip;
        overflow-x: auto;
        scrollbar-width: thin;

        &::-webkit-scrollbar {
            height: var(--spacing-nano);
        }

        &::-webkit-scrollbar-thumb {
            background-color: var(--color-gray_light);
        }
    }
}

